--- a/index.css
+++ b/index.css
@@ -42,10 +42,11 @@ button[type="submit"]:hover {
     padding: 50px;
     border-radius: 10px;
     box-shadow: 2px 2px 5px hsla(0, 0%, 0%, 0.507);
-    min-width: 300px;
+    min-width: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 25px;
 }
 
 h1 {
